[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twitch-stream-healthcheck"
version = "0.1.0"
description = "Monitor the health of a live Twitch stream in real time"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "m3u8>=4.0",
    "typer>=0.12",
    "pydantic>=2.0",
    "rich>=13.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
]

[project.scripts]
twitch-healthcheck = "twitch_healthcheck.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/twitch_healthcheck"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/twitch_healthcheck --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict_optional = true

[[tool.mypy.overrides]]
module = "twitch_healthcheck.*"
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "respx>=0.21",
]
